--- a/src/components/signup/Signup.scss
+++ b/src/components/signup/Signup.scss
@@ -8,7 +8,13 @@
   /* Active Shadow */
   box-shadow: 0px 14px 64px -4px rgba(24, 39, 75, 0.12),
     0px 8px 22px -6px rgba(24, 39, 75, 0.12);
-    padding: 300px 150px;
+  padding: 300px 50px;
+  img {
+    position: absolute;
+    top: 7%;
+    right: 7%;
+    display: none;
+  }
   h3 {
     color: var(--grey-300, #b0b1b3);
 
@@ -65,17 +71,34 @@
     width: 100%;
     outline: none;
   }
-  .error{
+  .error {
     padding: 0;
     text-align: left;
     color: red;
-        max-width: 335px;
+    max-width: 335px;
     width: 100%;
     font-size: 12px;
   }
+}
 
-  @media (max-width:900px) {
-    display: none;
-    
+@media (max-width: 900px) {
+  .signup {
+    img {
+      display: block;
+    }
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: 100;
+    transition: 0.2s all ease-in-out;
+  }
+  .menuOf {
+    width: 0;
+    opacity: 0;
+  }
+
+  .menuOn {
+    width: 100%;
+    opacity: 1;
   }
 }
